--- a/html/menu.html
+++ b/html/menu.html
@@ -89,31 +89,58 @@
     </section>
     <!-- fin del menu -->
 
-    <!-- inicio de pie de pagina // agregar links-->
-    <footer>
-        <div class="cajaFooter">
-            <div class="cajita">
-                <img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="imgFooter">
-                <a href="#">DIRECCION 1234</a>
-            </div>
-            <div class="cajita">
-                <img src="../imagenes/ic-wpp.png" alt="icono whatsapp" class="imgFooter">
-                <a href="#" > 11-1234-5678</a>
-            </div>
-            <div class="cajita">
-                <img src="../imagenes/ic-ig.png" alt="icono instagram" class="imgFooter">
-                <a href="#" > ESPITI_COFFEE</a>
-            </div>
-            <div class="cajita">
-                <img src="../imagenes/ic-fb.png" alt="icono facebook" class="imgFooter">
-                <a href="#" > ESPITI_COFFEE</a>
-            </div>
+<!-- inicio Footer -->
+<footer>
+
+    <!-- Redes -->
+    <section class="d-flex justify-content-around p-4 border-bottom mt-2">
+        <div>
+            <a href="" class="me-4 text-decoration-none text-reset fw-bold">
+                <img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+            </a>
         </div>
-        <div class="copy">
-            <small>&copy; 2022 <b>espiti</b> - Todos los Derechos Reservados.</small>
+        <div>
+            <a href="" class="me-4 text-decoration-none text-reset fw-bold">
+                <img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+            </a>
         </div>
-    </footer>
-    <!-- fin de pie de pagina -->
+    </section>
+    <!-- Fin Redes -->
+
+    <!-- Info Sedes  -->
+    <section class="d-flex justify-content-around row m-2 flex-sm-wrap-reverse">
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
+                <h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
+                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
+                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
+                <h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
+                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
+                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+            </a>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
+                <h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
+                <p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
+                <p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+            </a>
+        </div>
+    </section>
+    <!-- Fin Info Sedes  -->
+
+    <!-- Copyright -->
+    <div class="text-center p-1">
+        © 2022 <b>Spiti</b> - Todos los Derechos Reservados.
+    </div>
+    <!-- Copyright -->
+
+</footer>
+<!-- Fin Footer -->
     	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
