--- a/html/menu.html
+++ b/html/menu.html
@@ -4,16 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Menu de cafeteria spiti coffee and desserts con opciones dulces, saladas, para almorzar, compartir, regalar, opciones apto celiaco, vegetarianoso o veganos">
-    <meta name="keywords"
-        content="cafe, coffee, spiti, dulce, postre, cafe, cafe molido, cafetera, metodo de filtrado, espresso, capuccino. flat white, brunch, lunch, celiaco, vegano, vegetariano">
+    <meta name="description" content="Menu de cafeteria spiti coffee and desserts con opciones dulces, saladas, para almorzar, compartir, regalar, opciones apto celiaco, vegetarianoso o veganos">
+    <meta name="keywords" content="cafe, coffee, spiti, dulce, postre, cafe, cafe molido, cafetera, metodo de filtrado, espresso, capuccino. flat white, brunch, lunch, celiaco, vegano, vegetariano">
     <title>MENU</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
-        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
@@ -21,10 +16,10 @@
     <!-- inicio nav -->
 
 
-    <nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
-        <div class="container-fluid">
-            <a class="navbar-brand " href="../index.html">
-                <img class="logoCafe" src="../imagenes/logo.webp" alt="">
+    <nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron">
+        <div class="container-fluid d-flex justify-content-around">
+            <a href="../index.html">
+                <img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -54,6 +49,7 @@
     </nav>
 
     <!-- fin nav -->
+
     <!-- inicio del menu -->
     <section>
         <div>
@@ -212,7 +208,7 @@
     <footer>
 
         <!-- Redes -->
-        <section class="d-flex justify-content-around p-4 border-bottom mt-2 flex-wrap flex-sm-wrap-reverse">
+        <section class="d-flex justify-content-around p-4 border-bottom mt-2">
             <div>
                 <a href="" class="me-4 text-decoration-none text-reset fw-bold">
                     <img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
