--- a/html/reservas.html
+++ b/html/reservas.html
@@ -4,26 +4,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description"
-		content="Pagina de reservas de cafeteria spiti coffee and desserts donde podra elegir el tipo de sala, tiempo y servicios requeridos">
-	<meta name="keywords"
-		content="cafe, coffee, spiti, dulce, postre, alquiler de oficinas, servicio de brunch, servicio de lunch, almuerzo empresarial, evento privado">
+	<meta name="description" content="Pagina de reservas de cafeteria spiti coffee and desserts donde podra elegir el tipo de sala, tiempo y servicios requeridos">
+	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, alquiler de oficinas, servicio de brunch, servicio de lunch, almuerzo empresarial, evento privado">
 	<title>RESERVAS</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
-		rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	<link rel="stylesheet" href="../js/cdm.js">
 </head>
 
 <body>
-
 	<!-- inicio nav -->
 
 
-	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron">
 		<div class="container-fluid d-flex justify-content-around">
 			<a href="../index.html">
 				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
@@ -108,8 +101,6 @@
 			<div class="carousel-item">
 				<img src="../imagenes/ph-juntas-8.webp" class="d-block w-100" alt="sala-de-juntas-8">
 			</div>
-
-
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 			data-bs-slide="prev">
@@ -126,7 +117,7 @@
 	<!-- fin carousel -->
 
 	<div>
-		<form class="container bgSwhite">
+		<form class="container">
 			<fieldset>
 				<legend class="list-group">Seleccione una sala:</legend>
 				<label class="list-group-item">
@@ -285,10 +276,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
-	<script src="../js/cdm.js"></script>
-
-	<!--<script src="../js/script.js"></script>-->
-
+	<script src="../js/reservas-form.j"></script>
 </body>
 
 </html>
