--- a/html/sedes.html
+++ b/html/sedes.html
@@ -7,11 +7,8 @@
 	<meta name="description" content="Informacion de sedes de la cafeteria spiti coffe and desserts con mapas">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, sedes, palermo, microcentro, puerto madero">
 	<title>SEDES</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
-		rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
@@ -19,10 +16,10 @@
 	<!-- inicio nav -->
 
 
-	<nav class="navbar navbar-expand-md navbar-light bgMarron " id="botonera">
-		<div class="container-fluid">
-			<a class="navbar-brand " href="../index.html">
-				<img class="logoCafe" src="../imagenes/logo.webp" alt="">
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron">
+		<div class="container-fluid d-flex justify-content-around">
+			<a href="../index.html">
+				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -50,7 +47,6 @@
 			</div>
 		</div>
 	</nav>
-
 
 	<!-- fin nav -->
 
