--- a/html/tienda.html
+++ b/html/tienda.html
@@ -9,8 +9,6 @@
 	<meta name="keywords"
 		content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado">
 	<title>TIENDA</title>
-	<meta name="description" content="Pagina de inicio de spiti coffe and desserts con informacion">
-	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link
@@ -23,7 +21,7 @@
 	<!-- inicio nav -->
 
 
-	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron " id="botonera">
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron">
 		<div class="container-fluid d-flex justify-content-around">
 			<a href="../index.html">
 				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
@@ -55,107 +53,161 @@
 		</div>
 	</nav>
 
-
 	<!-- fin nav -->
 
+	<!-- inicio de divisiones en la tienda -->
 	<div>
+		<div id="saludo">
+		</div>
 		<div>
-			<h3 id="cursos">CURSOS</h3>
+			<h3>CURSOS</h3>
 			<p>Aca encontraras todos nuestros cursos.</p>
-			<div class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafefl.jpg" alt="Curso de filtrados">
-					<div class="card-body">
-						<p class="card-text">Curso de filtrados. Nivel inicial.</p>
+			<div id="cursos" class="d-flex justify-content-center flex-wrap ">
+				<div class="card m-2">
+					<div>
+						<h5 class="card-header">
+							FILTRADOS I
+						</h5>
+						<img class="card-img" src="../imagenes/cafefl.jpg" alt="Curso de filtrados 1">
+						<h5 class="card-title">$12000</h5>
+					</div>
+					<div>
+						<div class="card-body">
+							<p class="card-text">NIVEL INICAL</p>
+							<p class="card-text">No requiere conocimientos previos.</p>
+							<p class="card-text">Aca aprenderas ....</p>
+							<ul>
+								<li>Graduar molienda</li>
+							</ul>
+						</div>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafes.png" alt="Curso de tostado">
-					<div class="card-body">
-						<p class="card-text">Curso de tostado de granos. Nivel avanzado.</p>
+				<div class="card m-2">
+					<div>
+						<h5 class="card-header">
+							FILTRADOS I
+						</h5>
+						<img class="card-img" src="../imagenes/cafefl.jpg" alt="Curso de filtrados 1">
+						<h5 class="card-title">$12000</h5>
+					</div>
+					<div>
+						<div class="card-body">
+							<p class="card-text">NIVEL INICAL</p>
+							<p class="card-text">No requiere conocimientos previos.</p>
+							<p class="card-text">Aca aprenderas ....</p>
+							<ul>
+								<li>Graduar molienda</li>
+							</ul>
+						</div>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/pubCoffeMachine.png" alt="Curso de espresso">
-					<div class="card-body">
-						<p class="card-text">Curso de espresso. Nivel intermedio.</p>
+				<div class="card m-2">
+					<div>
+						<h5 class="card-header">
+							FILTRADOS I
+						</h5>
+						<img class="card-img" src="../imagenes/cafefl.jpg" alt="Curso de filtrados 1">
+						<h5 class="card-title">$12000</h5>
 					</div>
-				</div>
-			</div>
-		</div>
-		<div>
-			<h3 id="cafe">CAFE</h3>
-			<p>Viajar por el mundo con nuestros distintos origenes.</p>
-			<div class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafehoney.webp" alt="Cafe Honey">
-					<div class="card-body">
-						<p class="card-text">Cafe Honey para tostar.</p>
-					</div>
-				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafelavado.webp" alt="Cafe Lavado">
-					<div class="card-body">
-						<p class="card-text">Cafe Lavado tostado medio-claro.</p>
-					</div>
-				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafeverde.png" alt="Cafe verde">
-					<div class="card-body">
-						<p class="card-text">Cafe verde para tostar.</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div>
-			<h3 id="productos">PRODUCTOS</h3>
-			<p>Equipate con lo necesario para convertirte en el mejor barista de tu casa</p>
-			<div class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafemk.jpg" alt="Cafetera moka">
-					<div class="card-body">
-						<p class="card-text">Cafetera Moka.</p>
-					</div>
-				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafeex.jpg" alt="Cafe espresso">
-					<div class="card-body">
-						<p class="card-text">Cafetera espresso.</p>
-					</div>
-				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafepf.jpg" alt="Cafetera de embolo">
-					<div class="card-body">
-						<p class="card-text">Cafetera de embolo.</p>
+					<div>
+						<div class="card-body">
+							<p class="card-text">NIVEL INICAL</p>
+							<p class="card-text">No requiere conocimientos previos.</p>
+							<p class="card-text">Aca aprenderas ....</p>
+							<ul>
+								<li>Graduar molienda</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-		<div>
-			<h3 id="giftcards">GIFT CARDS</h3>
-			<p>No sabes que regalarte a tu amigui barista? No te preocupes, regalale una gift card para que venga y
-				elija el mejor equipamiento</p>
-			<div class="d-flex justify-content-center flex-wrap flex-sm-wrap-reverse ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 500">
-					<div class="card-body">
-						<p class="card-text">Gift card de $500</p>
-					</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafes.png" alt="Curso de tostado">
+				<div class="card-body">
+					<p class="card-text">Curso de tostado de granos. Nivel avanzado.</p>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 1000">
-					<div class="card-body">
-						<p class="card-text">Gift card de $1000</p>
-					</div>
-				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 2000">
-					<div class="card-body">
-						<p class="card-text">Gift card de $2000</p>
-					</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/pubCoffeMachine.png" alt="Curso de espresso">
+				<div class="card-body">
+					<p class="card-text">Curso de espresso. Nivel intermedio.</p>
 				</div>
 			</div>
 		</div>
+	</div>
+	<div>
+		<h3 id="cafe">CAFE</h3>
+		<p>Viajar por el mundo con nuestros distintos origenes.</p>
+		<div class="d-flex justify-content-center flex-wrap ">
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafehoney.webp" alt="Cafe Honey">
+				<div class="card-body">
+					<p class="card-text">Cafe Honey para tostar.</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafelavado.webp" alt="Cafe Lavado">
+				<div class="card-body">
+					<p class="card-text">Cafe Lavado tostado medio-claro.</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafeverde.png" alt="Cafe verde">
+				<div class="card-body">
+					<p class="card-text">Cafe verde para tostar.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div>
+		<h3 id="productos">PRODUCTOS</h3>
+		<p>Equipate con lo necesario para convertirte en el mejor barista de tu casa</p>
+		<div class="d-flex justify-content-center flex-wrap ">
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafemk.jpg" alt="Cafetera moka">
+				<div class="card-body">
+					<p class="card-text">Cafetera Moka.</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafeex.jpg" alt="Cafe espresso">
+				<div class="card-body">
+					<p class="card-text">Cafetera espresso.</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/cafepf.jpg" alt="Cafetera de embolo">
+				<div class="card-body">
+					<p class="card-text">Cafetera de embolo.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div>
+		<h3 id="giftcards">GIFT CARDS</h3>
+		<p>No sabes que regalarte a tu amigui barista? No te preocupes, regalale una gift card para que venga y
+			elija el mejor equipamiento</p>
+		<div class="d-flex justify-content-center flex-wrap flex-sm-wrap-reverse ">
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 500">
+				<div class="card-body">
+					<p class="card-text">Gift card de $500</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 1000">
+				<div class="card-body">
+					<p class="card-text">Gift card de $1000</p>
+				</div>
+			</div>
+			<div class="card m-2" style="width: 18rem;">
+				<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 2000">
+				<div class="card-body">
+					<p class="card-text">Gift card de $2000</p>
+				</div>
+			</div>
+		</div>
+	</div>
 	</div>
 
 	<!-- inicio Footer -->
@@ -177,8 +229,8 @@
 		<!-- Fin Redes -->
 
 		<!-- Info Sedes  -->
-		<section class="d-flex justify-content-around m-2 flex-sm-wrap-reverse">
-			<div class="col-sm-12 col-md-4 col-lg-4">
+		<section class="d-flex justify-content-around m-2 flex-wrap flex-sm-wrap-reverse">
+			<div class="p-4">
 				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
 					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
@@ -192,7 +244,7 @@
 					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
 				</a>
 			</div>
-			<div class="col-sm-12 col-md-4 col-lg-4">
+			<div class="p-4">
 				<a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
 					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
 					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
@@ -214,6 +266,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
+	<script src="../js/tienda.js"></script>
 
 </body>
 
