--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description"
-		content="Pagina de inicio de spiti coffe and dessert, historia de sus comienzos y con sus compromisos a la comunidad">
-	<meta name="google-site-verification" content="Yoh5imjzDlYa6o_bt29J4OJPDAmz_3pQVpNPIzp7lhc" />
 	<meta name="description" content="Pagina de inicio de spiti coffe and dessert, historia de sus comienzos y con sus compromisos a la comunidad">
 	<meta name="keywords" content="cafe, coffee, spiti, dulce, postre, curso cafe, alquiler oficina">
-	<title> -ESPITI- </title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link
-		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
-		rel="stylesheet">
+	<title>-ESPITI-</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
+	<!-- inicio nav -->
 
-	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron" id="botonera">
+
+	<nav class="navbar sticky-top navbar-expand-md navbar-light bgMarron">
 		<div class="container-fluid d-flex justify-content-around">
 			<a href="index.html">
 				<img class="logoCafe " src="imagenes/logo.webp" alt="logo Spiti">
@@ -52,6 +48,7 @@
 		</div>
 	</nav>
 
+	<!-- fin nav -->
 
 	<!-- inicio banner + imagenes de la cafeteria -->
 	<section id="banner">
@@ -85,8 +82,7 @@
 		<p>Crear una cultura de calidez y pertenencia, donde todos se sientan bienvenidos.</p>
 		<h3>Vision</h3>
 		<p>Establecer un ambiente donde los trabajadores sean capacitados y motivados a desarrollar el más alto
-			potencial de
-			productividad. Con gente orgullosa de sus valores y gente de éxito sin importar el puesto que desempeñe.</p>
+			potencial de productividad. Con gente orgullosa de sus valores y gente de éxito sin importar el puesto que desempeñe.</p>
 	</section>
 	<!-- fin secciones nosotros + valores -->
 
@@ -107,8 +103,7 @@
 		<p>Es nuestro compromiso realizar negocios de manera que contribuyamos positivamente con todos y con nuestro
 			planeta, desde la manera en la que compramos el café y disminuimos el impacto en nuestro ambiente, hasta la
 			forma en la que nos involucramos con nuestras comunidades Y gracias a que estás con nosotros, vos también
-			formas
-			parte de Spipti.</p>
+			formas parte de Spipti.</p>
 		<img src="imagenes/proceso3.png" alt="Proceso de seleccion de cafe">
 	</section>
 	<!-- fin seccion compromisos-->
@@ -165,7 +160,6 @@
 
 	</footer>
 	<!-- Fin Footer -->
-
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
